--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.PlantShop" parent="Base.Theme.PlantShop" />
+
+    <style name="Theme.App.FullScreen" parent="Base.Theme.PlantShop">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
 </resources>
