--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#007537</color>
+    <color name="background_item_product">#F6F6F6</color>
+    <color name="color_Plant_Type">#7D7B7B</color>
+
 </resources>
