--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -12,6 +12,7 @@
         app:cardCornerRadius="8dp"
         >
         <ImageView
+            android:id="@+id/img_Item_Product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/background_item_product"
