kiểm tra chỉnh sửa code. thêm firebase

--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity_DangKy"
+    tools:context=".activity.Activity_DangKy"
    >
 
     <ImageView
