--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity_DangKy"
+    android:background="@color/white"
+    tools:context=".activity.Activity_DangKy"
     >
 
     <ImageView
@@ -16,10 +17,12 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:textAlignment="center"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:fontFamily="@font/lato"
-        android:text="Mua sắm và trải nghiệm sản phẩm cây trồng" />
+        android:textSize="14sp"
+        android:text="@string/lb_login" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,13 +51,15 @@
             android:hint="Nhập mật khẩu" />
 
         <Button
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
             android:id="@+id/btn_Login"
-            android:backgroundTint="#09BA10"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/green"
+            android:layout_gravity="center"
+            android:text="Đăng nhập"
             android:textSize="20dp"
-            android:text="Đăng nhập" />
+            app:cornerRadius="8dp" />
 
         <TextView
             android:id="@+id/tv_forgotpass"
@@ -63,19 +68,23 @@
             android:textAlignment="center"
             android:layout_marginTop="20dp"
             android:fontFamily="@font/lato"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:text="Quên mật khẩu" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:gravity="center">
             <TextView
-                android:id="@+id/tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:fontFamily="@font/lato"
+                android:textColor="@color/black"
+                android:textSize="14sp"
                 android:text="Chưa có tài khoản? " />
             <TextView
                 android:id="@+id/tv_SignUp"
@@ -84,6 +93,8 @@
                 android:textAlignment="center"
                 android:fontFamily="@font/lato"
                 android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 android:text="Đăng ký" />
         </LinearLayout>
 
