--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
-    tools:context=".activity_welcome">
+    tools:context=".activity.Activity_Welcome">
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
