--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".activity.Activity_DangKy"
    >
 
@@ -19,7 +20,8 @@
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
-        android:text="Mua sắm và trải nghiệm sản phẩm cây trồng" />
+        android:textColor="@color/black"
+        android:text="@string/lb_login" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,26 +45,29 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:layout_marginTop="20dp"
             android:hint="Nhập mật khẩu" />
 
         <EditText
-            android:id="@+id/edt_SConfirmpass"
+            android:id="@+id/edt_SConfirmPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:hint="Nhập lại mật khẩu" />
 
         <Button
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
             android:id="@+id/btn_Submit"
-            android:backgroundTint="#09BA10"
+            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_width="280dp"
+            android:backgroundTint="@color/green"
             android:textSize="20dp"
-            android:text="Đăng ký" />
+            android:layout_gravity="center"
+            android:text="Đăng ký"
+            app:cornerRadius="8dp"
+            />
 
         <TextView
             android:id="@+id/tv_back"
