--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:layout_marginTop="20dp"
             android:hint="Nhập mật khẩu" />
 
@@ -62,7 +62,7 @@
             app:cornerRadius="8dp" />
 
         <TextView
-            android:id="@+id/tv_forgotpass"
+            android:id="@+id/tv_Forgotpass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
