--- a/app/src/main/res/layout/activity_new_pass.xml
+++ b/app/src/main/res/layout/activity_new_pass.xml
@@ -10,12 +10,10 @@
     >
 
     <ImageView
-        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="315dp"
         app:srcCompat="@drawable/logoplant" />
     <TextView
-        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
@@ -36,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="textPassword"
             android:layout_marginTop="20dp"
             android:hint="Mật khẩu mới"
             />
