--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -2,20 +2,81 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="40dp"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/editTextText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:textSize="20dp"
         android:inputType="text"
         android:text="Thứ tư, 03/09/2021" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:layout_height="150dp"
+        android:padding="10dp">
 
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:src="@drawable/plant"
+            android:layout_weight="3"
+            />
+
+        <LinearLayout
+            android:layout_weight="6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Đặt hàng thành công"
+                android:textColor="@color/green"
+                android:fontFamily="@font/lato"
+                android:textStyle="bold"
+                android:textSize="20sp">
+
+            </TextView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Spider Plant |"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/lato"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/tv_Type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  Ưa bóng"
+                    android:fontFamily="@font/lato"
+                    android:textColor="#504C4C"
+                    android:textSize="18sp"/>
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/tv_Soluong"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="2 sản phẩm"
+                android:fontFamily="@font/lato"
+                android:textColor="#000000"
+                android:textSize="16dp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
