--- a/app/src/main/res/layout/fragnment_profile.xml
+++ b/app/src/main/res/layout/fragnment_profile.xml
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:fontFamily="@font/lato"
+            android:textSize="18dp"
             android:layout_marginTop="10dp"
             android:text="Chỉnh sửa thông tin" />
 
@@ -82,6 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
+            android:textSize="18dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:text="Cẩm nang cây trồng" />
@@ -91,6 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:layout_marginTop="10dp"
             android:text="Lịch sử giao dịch" />
@@ -101,6 +104,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato"
             android:layout_marginTop="10dp"
+            android:textSize="18dp"
             android:textColor="@color/black"
             android:text="Trợ giúp" />
 
@@ -109,6 +113,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             android:inputType="text"
             android:hint="Tài khoản và bảo mật"/>
 
