--- a/app/src/main/res/layout/fragnment_profile.xml
+++ b/app/src/main/res/layout/fragnment_profile.xml
@@ -3,140 +3,159 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="24dp">
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="25dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/lato"
+        android:text="PROFILE"
+        android:textAlignment="center"
         android:textColor="@color/black"
-        android:text="PROFILE" />
+        android:textSize="25dp" />
 
     <LinearLayout
-        android:padding="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="26dp"
+            app:cardCornerRadius="1000dp">
+
+            <ImageView
+                android:id="@+id/img_Avatar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:src="@drawable/plant" />
+
+        </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Vũ Nguyễn"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:fontFamily="@font/lato"/>
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/tv_FullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="vunvps36442@fpt.edu.vn"
                 android:fontFamily="@font/lato"
-                android:textColor="@color/black"/>
+                android:text="Vũ Nguyễn"
+                android:textColor="@color/black"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_EmailUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/lato"
+                android:hint="vunvps36442@fpt.edu.vn"
+                android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="40dp">
+        android:layout_marginTop="50dp"
+       >
 
-        <EditText
-            android:id="@+id/editTextText2"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:inputType="text"
-            android:hint="Chung" />
+            android:text="Chung"
+            android:textColor="@color/color_Plant_Type"
+            android:textSize="20dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="4dp"/>
 
         <TextView
             android:id="@+id/tv_EditInformation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/lato"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            android:text="Chỉnh sửa thông tin" />
+            android:text="Chỉnh sửa thông tin"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tv_HandbookPlant"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/lato"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
+            android:text="Cẩm nang cây trồng"
             android:textColor="@color/black"
-            android:text="Cẩm nang cây trồng" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tv_History"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/lato"
-            android:textSize="18dp"
+            android:text="Lịch sử giao dịch"
             android:textColor="@color/black"
-            android:layout_marginTop="10dp"
-            android:text="Lịch sử giao dịch" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tv_Help"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/lato"
-            android:layout_marginTop="10dp"
-            android:textSize="18dp"
+            android:text="Trợ giúp"
             android:textColor="@color/black"
-            android:text="Trợ giúp" />
+            android:textSize="18dp" />
 
-        <EditText
-            android:id="@+id/editTextText3"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:inputType="text"
-            android:hint="Tài khoản và bảo mật"/>
+            android:textColor="@color/color_Plant_Type"
+            android:text="Bảo mật và tài khoản"
+            android:layout_marginTop="30dp"
+            android:textSize="20dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_marginTop="4dp"/>
 
         <TextView
             android:id="@+id/tv_ChangePass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="17dp"
             android:fontFamily="@font/lato"
+            android:text="Đổi mật khẩu"
             android:textColor="@color/black"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
-            android:text="Đổi mật khẩu" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/tv_LogOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/lato"
+            android:text="Đăng xuất"
             android:textColor="#FF0000"
-            android:layout_marginTop="20dp"
-            android:textSize="18dp"
-            android:text="Đăng xuất" />
+            android:textSize="18dp" />
     </LinearLayout>
 
 </LinearLayout>
