--- a/app/src/main/res/layout/fragmen_add_product.xml
+++ b/app/src/main/res/layout/fragmen_add_product.xml
@@ -114,7 +114,7 @@
             android:id="@+id/edt_Price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             android:textSize="24sp"
             android:textColor="@color/black"
             android:layout_marginTop="15dp"
