--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -57,34 +57,46 @@
             android:fontFamily="@font/lato"/>
 
         <TextView
-            android:id="@+id/tv_MoiVe"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="28dp"
-            android:gravity="center"
-            android:text="Mới về"
-            android:textColor="@color/select_tv_type"
-            android:textSize="14sp"
-            android:fontFamily="@font/lato"/>
-
-        <TextView
-                android:id="@+id/tv_UaBong"
+            android:id="@+id/tv_UaBong"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="28dp"
             android:gravity="center"
             android:text="Ưa bóng"
             android:textColor="@color/select_tv_type"
+            android:background="@drawable/select_type_product"
             android:textSize="14sp"
             android:fontFamily="@font/lato"/>
 
         <TextView
-            android:id="@+id/tv_UaMat"
+                android:id="@+id/tv_UaMat"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="28dp"
             android:gravity="center"
             android:text="Ưa mát"
+            android:textColor="@color/select_tv_type"
+            android:textSize="14sp"
+            android:fontFamily="@font/lato"/>
+
+        <TextView
+            android:id="@+id/tv_UaSang"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="28dp"
+            android:gravity="center"
+            android:text="Ưa sáng"
+            android:textColor="@color/select_tv_type"
+            android:textSize="14sp"
+            android:fontFamily="@font/lato"/>
+
+        <TextView
+            android:id="@+id/tv_UaToi"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="28dp"
+            android:gravity="center"
+            android:text="Ưa tối"
             android:textColor="@color/select_tv_type"
             android:textSize="14sp"
             android:fontFamily="@font/lato"/>
@@ -97,7 +109,7 @@
         android:layout_weight="1">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rc_Plant"
+            android:id="@+id/rc_Product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
