--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="green">#007537</color>
     <color name="background_item_product">#F6F6F6</color>
     <color name="color_Plant_Type">#7D7B7B</color>
-
+    <color name="delete">#4F4F4F</color>
 </resources>
