--- a/app/src/main/res/layout/fragment_edit_or_delete.xml
+++ b/app/src/main/res/layout/fragment_edit_or_delete.xml
@@ -20,48 +20,31 @@
             android:paddingHorizontal="24dp">
 
             <ImageView
-                android:id="@+id/img_Back"
+                android:id="@+id/img_BackToProduct"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:src="@drawable/baseline_keyboard_arrow_left_24" />
 
-            <EditText
-                android:id="@+id/edt_NameProduct"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/img_Back"
-                android:background="@color/white"
-                android:fontFamily="@font/lato"
-                android:hint="Nhập tên sản phẩm"
-                android:textAlignment="center" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <ImageView
-                android:id="@+id/img_addProduct"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:scaleType="fitCenter" />
-
             <TextView
-                android:id="@+id/lb_Notify"
+                android:id="@+id/tv_NameProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="50dp"
+                android:layout_toEndOf="@+id/img_BackToProduct"
                 android:fontFamily="@font/lato"
-                android:text="Nhấn vào để thêm ảnh"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
-
+                android:textSize="18sp" />
         </RelativeLayout>
+
+
+        <ImageView
+            android:id="@+id/img_Product"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="fitCenter" />
 
 
         <LinearLayout
@@ -78,7 +61,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_TypeProduct"
+                    android:id="@+id/tv_Type_Product"
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:layout_marginHorizontal="5dp"
@@ -86,12 +69,11 @@
                     android:fontFamily="@font/lato"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Chọn loại sản phẩm"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/tv_TypeOfProduct"
+                    android:id="@+id/tv_TypeOf_Product"
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
                     android:layout_marginHorizontal="5dp"
@@ -99,23 +81,20 @@
                     android:fontFamily="@font/lato"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Chọn thể loại sản phẩm"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
 
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/edt_Price"
+            <TextView
+                android:id="@+id/tv_Price_Prodcut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="10dp"
-                android:background="@color/white"
                 android:fontFamily="@font/lato"
-                android:hint="Nhập giá sản phẩm"
-                android:inputType="number"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
+                android:textStyle="bold"
                 android:textSize="24sp" />
 
             <TextView
@@ -149,18 +128,13 @@
                     android:textColor="@color/black"
                     android:textSize="14dp" />
 
-                <EditText
-                    android:id="@+id/edt_Size"
+                <TextView
+                    android:id="@+id/tv_Size_Product"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/white"
-                    android:clickable="false"
-                    android:focusable="false"
                     android:fontFamily="@font/lato"
                     android:gravity="end"
-                    android:hint="Chọn kích cỡ"
-                    android:inputType="text"
                     android:textColor="@color/black"
                     android:textSize="16dp" />
 
@@ -187,16 +161,13 @@
                     android:textColor="@color/black"
                     android:textSize="14dp" />
 
-                <EditText
-                    android:id="@+id/edt_Brand"
+                <TextView
+                    android:id="@+id/tv_Brand_Product"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/white"
                     android:fontFamily="@font/lato"
                     android:gravity="end"
-                    android:hint="Nhập xuất xứ"
-                    android:inputType="text"
                     android:textColor="@color/black"
                     android:textSize="16dp" />
 
@@ -223,17 +194,14 @@
                     android:textColor="@color/black"
                     android:textSize="14dp" />
 
-                <EditText
-                    android:id="@+id/edt_Quantity"
+                <TextView
+                    android:id="@+id/tv_Quantity_Product"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="@color/white"
                     android:fontFamily="@font/lato"
                     android:gravity="end"
-                    android:hint="Nhập số lượng"
-                    android:inputType="number"
-                    android:textColor="@color/black"
+                    android:textColor="@color/green"
                     android:textSize="16dp" />
 
             </LinearLayout>
@@ -262,19 +230,17 @@
         </LinearLayout>
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/edt_Describe"
+    <TextView
+        android:id="@+id/tv_Describe_Product"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_above="@+id/ll_bottom"
         android:layout_below="@+id/ll_header"
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/black"
         android:layout_weight="1"
-        android:background="@color/white"
         android:gravity="left|top"
-        android:hint="Thêm mô tả"
-        android:inputType="text"
         android:textSize="18dp" />
 
 
@@ -290,22 +256,22 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_Cancel"
+            android:id="@+id/btn_Delete"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="170dp"
             android:layout_height="50dp"
-            android:text="Hủy"
-            android:textColor="@color/color_Plant_Type"
+            android:text="Xoá"
+            android:textColor="@color/delete"
             android:textSize="20dp"
             app:cornerRadius="8dp" />
 
         <Button
-            android:id="@+id/btn_Submit"
+            android:id="@+id/btn_Edit"
             android:layout_width="170dp"
             android:layout_height="50dp"
             android:layout_marginLeft="15dp"
             android:backgroundTint="@color/green"
-            android:text="Đồng ý"
+            android:text="Chỉnh sửa"
             android:textColor="@color/white"
             android:textSize="20dp"
             app:cornerRadius="8dp" />
