--- a/app/src/main/res/layout/fragment_edit_or_delete.xml
+++ b/app/src/main/res/layout/fragment_edit_or_delete.xml
@@ -87,7 +87,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/tv_Price_Prodcut"
+                android:id="@+id/tv_Price_Product"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
