--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -23,7 +23,7 @@
             android:id="@+id/tv_Label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Thông báo"
+            android:text="Cây trồng"
             android:textColor="@color/black"
             android:fontFamily="@font/lato"
             android:textSize="16sp"
