--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -38,6 +38,7 @@
         android:drawableRight="@drawable/search_24px"/>
 
     <TextView
+        android:id="@+id/lb_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tìm kiếm gần đây"
