--- a/app/src/main/res/layout/item_thongbao.xml
+++ b/app/src/main/res/layout/item_thongbao.xml
@@ -1,82 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="40dp"
     android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editTextText"
+    <TextView
+        android:id="@+id/tv_Date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20dp"
-        android:inputType="text"
-        android:text="Thứ tư, 03/09/2021" />
+        android:textColor="@color/black"
+        android:fontFamily="@font/lato"
+        android:text="Thứ tư, 03/11/2023" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="4dp"
+        android:background="@color/black"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:padding="10dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:src="@drawable/plant"
-            android:layout_weight="3"
-            />
+        <androidx.cardview.widget.CardView
+            android:layout_width="77dp"
+            android:layout_height="77dp"
+            app:cardCornerRadius="8dp">
+
+            <ImageView
+                android:id="@+id/img_TB_Product"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background_item_product"
+                android:src="@drawable/plant" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:layout_weight="6"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:layout_marginStart="15dp"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_Search_PlantName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Đặt hàng thành công"
-                android:textColor="@color/green"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/lato"
-                android:textStyle="bold"
-                android:textSize="20sp">
-
-            </TextView>
+                android:text="Đình Nhân đã đặt hàng"
+                android:textColor="@color/green"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                >
+
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tv_TB_PlantName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Spider Plant |"
-                    android:textColor="#000000"
+                    android:fontFamily="@font/lato"
+                    android:text="@string/plant_Name"
+                    android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:fontFamily="@font/lato"
-                    android:textSize="18sp"/>
+                    android:textSize="16sp" />
+                
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="20dp"
+                    android:background="@color/black"
+                    android:layout_marginHorizontal="3dp"/>
+
                 <TextView
-                    android:id="@+id/tv_Type"
+                    android:id="@+id/tv_TB_PlantType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="  Ưa bóng"
                     android:fontFamily="@font/lato"
-                    android:textColor="#504C4C"
-                    android:textSize="18sp"/>
+                    android:text="@string/plant_Type"
+                    android:textColor="@color/color_Plant_Type"
+                    android:textSize="14sp" />
+
             </LinearLayout>
 
-
             <TextView
-                android:id="@+id/tv_Soluong"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_TB_SoLuongMua"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2 sản phẩm"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/lato"
-                android:textColor="#000000"
-                android:textSize="16dp"/>
+                android:text="2 Sản phẩm"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                 />
 
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
