--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -10,6 +10,7 @@
         android:src="@drawable/baseline_access_time_24"/>
 
     <TextView
+        android:id="@+id/tv_historyName"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
