--- a/app/src/main/res/layout/fragnment_profile.xml
+++ b/app/src/main/res/layout/fragnment_profile.xml
@@ -24,8 +24,8 @@
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginEnd="26dp"
             app:cardCornerRadius="1000dp">
 
@@ -51,7 +51,7 @@
                 android:fontFamily="@font/lato"
                 android:text="Vũ Nguyễn"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="22dp" />
 
             <TextView
                 android:id="@+id/tv_EmailUser"
@@ -59,6 +59,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato"
                 android:hint="vunvps36442@fpt.edu.vn"
+                android:layout_marginTop="3dp"
+                android:textSize="16sp"
                 android:textColor="@color/black" />
         </LinearLayout>
     </LinearLayout>
